--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.6.7",
     "expo": "~50.0.7",
     "expo-status-bar": "~1.11.1",
+    "immer": "^10.0.3",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.73.4",
