--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native-stack": "^6.9.18",
     "@react-navigation/stack": "^6.3.21",
     "@reduxjs/toolkit": "^2.2.1",
+    "@tanstack/react-query": "^4.28.0",
     "@types/react": "^18.2.56",
     "axios": "^1.6.7",
     "expo": "~50.0.7",
