--- a/app.json
+++ b/app.json
@@ -4,7 +4,6 @@
     "slug": "mobile_lx_frontend",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.jpg",
     "userInterfaceStyle": "light",
     "assetBundlePatterns": [
       "**/*"
@@ -13,13 +12,13 @@
       "supportsTablet": true
     },
     "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      }
+      "package": "com.darshak69.mobile_lx_frontend"
     },
-    "web": {
-      "favicon": "./assets/favicon.png"
+    "web": {},
+    "extra": {
+      "eas": {
+        "projectId": "9c3f2e5b-0c2f-44fd-bb47-a5ba57e9b780"
+      }
     }
   }
 }
