--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^13.0.0",
-    "@react-native-async-storage/async-storage": "^1.22.0",
+    "@expo/vector-icons": "^14.0.0",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
     "@react-navigation/stack": "^6.3.21",
@@ -18,7 +18,7 @@
     "@tanstack/react-query": "^4.28.0",
     "@types/react": "^18.2.56",
     "axios": "^1.6.7",
-    "expo": "~50.0.7",
+    "expo": "~50.0.8",
     "expo-status-bar": "~1.11.1",
     "immer": "^10.0.3",
     "nativewind": "^2.0.11",
@@ -29,7 +29,7 @@
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-svg": "9.13.6",
+    "react-native-svg": "14.1.0",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
     "redux-saga": "^1.3.0",
@@ -38,7 +38,6 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.12",
-    "@types/react-native": "^0.73.0",
     "@types/react-test-renderer": "^18.0.7",
     "tailwindcss": "3.3.2"
   },
