--- a/app.json
+++ b/app.json
@@ -19,6 +19,12 @@
       "eas": {
         "projectId": "9c3f2e5b-0c2f-44fd-bb47-a5ba57e9b780"
       }
+    },
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/9c3f2e5b-0c2f-44fd-bb47-a5ba57e9b780"
     }
   }
 }
