--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.6.7",
     "expo": "~50.0.8",
     "expo-status-bar": "~1.11.1",
+    "expo-updates": "~0.24.11",
     "immer": "^10.0.3",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
